samples/_failures_safe/1761503692_d46929_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68af22c5.c: In function ‘bfs’:
./samples/SAFE/__tmp_68af22c5.c:167:49: error: expected ‘)’ at end of input
  167 |     int *visited = (int *)calloc(graph->vertices
      |                                 ~               ^
      |                                                 )
./samples/SAFE/__tmp_68af22c5.c:167:27: error: too few arguments to function ‘calloc’
  167 |     int *visited = (int *)calloc(graph->vertices
      |                           ^~~~~~
In file included from ./samples/SAFE/__tmp_68af22c5.c:3:
/usr/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
./samples/SAFE/__tmp_68af22c5.c:167:5: error: expected declaration or statement at end of input
  167 |     int *visited = (int *)calloc(graph->vertices
      |     ^~~
